--- a/Api_Project/App/App.vcxproj
+++ b/Api_Project/App/App.vcxproj
@@ -156,6 +156,9 @@
       <Project>{385f62ce-115d-4075-a764-887e6955fcef}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="App.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
