--- a/Api_Project/EngineBase/EngineBase.vcxproj.filters
+++ b/Api_Project/EngineBase/EngineBase.vcxproj.filters
@@ -7,6 +7,12 @@
     <ClInclude Include="EngineString.h">
       <Filter>String</Filter>
     </ClInclude>
+    <ClInclude Include="EngineMath.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="FTransform.h">
+      <Filter>Math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EngineDebug.cpp">
@@ -15,6 +21,12 @@
     <ClCompile Include="EngineString.cpp">
       <Filter>String</Filter>
     </ClCompile>
+    <ClCompile Include="EngineMath.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="FTransform.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Debug">
@@ -22,6 +34,9 @@
     </Filter>
     <Filter Include="String">
       <UniqueIdentifier>{d36d8566-8375-4c7d-9acf-d52aa5584e58}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Math">
+      <UniqueIdentifier>{6433c1ac-63fc-4f99-837a-120169c99bce}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
