--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -10,7 +10,9 @@
     <ClCompile Include="Stage1_Level.cpp">
       <Filter>ContentsLevel</Filter>
     </ClCompile>
-    <ClCompile Include="Kirby_Player.cpp" />
+    <ClCompile Include="Kirby_Player.cpp">
+      <Filter>ContentsObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleLevel.h">
@@ -22,7 +24,9 @@
     <ClInclude Include="Stage1_Level.h">
       <Filter>ContentsLevel</Filter>
     </ClInclude>
-    <ClInclude Include="Kirby_Player.h" />
+    <ClInclude Include="Kirby_Player.h">
+      <Filter>ContentsObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ContentsLevel">
@@ -30,6 +34,9 @@
     </Filter>
     <Filter Include="GameCore">
       <UniqueIdentifier>{a4888ff9-9db4-4026-b17b-d375642d4577}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ContentsObject">
+      <UniqueIdentifier>{1c18503f-14a5-483b-b894-fd43af5a3acb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
