--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -42,6 +42,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Monster_Base.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Stage1_Level.cpp">
       <SubType>
       </SubType>
@@ -61,6 +65,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Kirby_Player.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Monster_Base.h">
       <SubType>
       </SubType>
     </ClInclude>
