--- a/Api_Project/EngineCore/EngineCore.vcxproj
+++ b/Api_Project/EngineCore/EngineCore.vcxproj
@@ -175,6 +175,14 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineResourcesManager.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Image.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ImageRenderer.h">
       <SubType>
       </SubType>
@@ -206,6 +214,14 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EngineCore.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EngineResourcesManager.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Image.cpp">
       <SubType>
       </SubType>
     </ClCompile>
