--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -22,7 +22,7 @@
     <ClCompile Include="Base.cpp">
       <Filter>Stage1_Actor</Filter>
     </ClCompile>
-    <ClCompile Include="TitleAcotr.cpp">
+    <ClCompile Include="TitleActor.cpp">
       <Filter>Title_Actor</Filter>
     </ClCompile>
   </ItemGroup>
@@ -51,7 +51,7 @@
     <ClInclude Include="Base.h">
       <Filter>Stage1_Actor</Filter>
     </ClInclude>
-    <ClInclude Include="TitleAcotr.h">
+    <ClInclude Include="TitleActor.h">
       <Filter>Title_Actor</Filter>
     </ClInclude>
   </ItemGroup>
