--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -54,6 +54,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Stage1_MAP.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TitleActor.cpp">
       <SubType>
       </SubType>
@@ -86,6 +90,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Stage1_Level.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Stage1_MAP.h">
       <SubType>
       </SubType>
     </ClInclude>
