--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -30,7 +30,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ActorControl.cpp">
+    <ClCompile Include="ActorCommon.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -72,7 +72,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ActorControl.h">
+    <ClInclude Include="ActorCommon.h">
       <SubType>
       </SubType>
     </ClInclude>
