--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -34,6 +34,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="AllStar.cpp" />
     <ClCompile Include="Base.cpp">
       <SubType>
       </SubType>
@@ -76,6 +77,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="AllStar.h" />
     <ClInclude Include="Base.h">
       <SubType>
       </SubType>
