--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -51,6 +51,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Log.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster_Base.cpp">
       <SubType>
       </SubType>
@@ -91,6 +95,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Kirby_Player.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Log.h">
       <SubType>
       </SubType>
     </ClInclude>
