아이스 몬스터 만드는 중 내일 브금ppt 까지는 다 끝내놓고 아이스 몬스터 먹고 변신까지는 만들기

--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="AllStar.cpp">
       <Filter>Stage_Actor</Filter>
     </ClCompile>
+    <ClCompile Include="pengi_Ice.cpp">
+      <Filter>Stage_Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleLevel.h">
@@ -64,6 +67,9 @@
     <ClInclude Include="ActorCommon.h" />
     <ClInclude Include="ModeEnum.h" />
     <ClInclude Include="AllStar.h">
+      <Filter>Stage_Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="pengi_Ice.h">
       <Filter>Stage_Actor</Filter>
     </ClInclude>
   </ItemGroup>
