--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -55,6 +55,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="pengi_Ice.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Stage1_Level.cpp">
       <SubType>
       </SubType>
@@ -96,6 +100,10 @@
     </ClInclude>
     <ClInclude Include="ModeEnum.h" />
     <ClInclude Include="Monster_Base.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="pengi_Ice.h">
       <SubType>
       </SubType>
     </ClInclude>
