--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -47,6 +47,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Ice.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Kirby_Player.cpp">
       <SubType>
       </SubType>
@@ -91,6 +95,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Game_Core.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Ice.h">
       <SubType>
       </SubType>
     </ClInclude>
