엔진 최신화

--- a/Api_Project/EngineCore/EngineCore.vcxproj
+++ b/Api_Project/EngineCore/EngineCore.vcxproj
@@ -183,6 +183,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineDebug.h" />
     <ClInclude Include="EngineResourcesManager.h">
       <SubType>
       </SubType>
@@ -221,6 +222,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EngineDebug.cpp" />
     <ClCompile Include="EngineResourcesManager.cpp">
       <SubType>
       </SubType>
