--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -71,6 +71,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Sword_Monster.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TitleActor.cpp">
       <SubType>
       </SubType>
@@ -120,6 +124,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Stage1_MAP.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Sword_Monster.h">
       <SubType>
       </SubType>
     </ClInclude>
